
This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {url-repo}/commits/master[commit history] on GitHub.

== Unreleased

* clear `:base_dir` option if value is `:docdir` and paths with docdir information is not available (such as to `asciidocify` filter) (#270)
* convert documentation from README.adoc to an Antora component in the Asciidoctor docs site. (#238)
* bump requirements: Asciidoctor 2.0, Ruby 2.7, JRuby 9.4 (#237)
* explain Liquid include interactions in docs (#223)
* explain asciidoctor-diagram data-uri and svg options in docs (#217)
* provide `asciidoc_docinfo` Liquid filter to allow including docinfo content in layouts (#164)
* correct excerpt hook handling so excerpts can be used with other Jekyll plugins (#230)
* enhance test setup to allow multiple `_config.yml` files per fixture
* switch CI to GitHub Actions (#240)
* implement `implicit_page_variables` asciidoc key support (#207)
* support Jekyll `unpublished` key overrriding AsciiDoc `page-published` attribute (#257)
* Document the existing behavior around YAML page attributes and implement a way to merge config and page attributes for page variables.
Merging requires a backwards incompatible change for object-valued page attributes from `_config.yml`; control this behavior with an `enable_attribute_value_coercion` option (false by default).
The existing behavior is now deprecated and will be removed in the next major version. (#158)

== 3.0.0 (2019-08-31) - @mojavelinux

_No changes since previous release._

== 3.0.0.beta.2 (2019-06-03) - @mojavelinux

* allow site-wide AsciiDoc attributes to also be defined on `asciidoc` key in site configuration (#126)
* set date page variable from revdate for any document in a collection (posts or otherwise) (#202)
* allow non-ASCII word character to be used in name of attribute reference in config file